Remove schedule and workflow_dispatch triggers

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,9 +1,9 @@
 name: 刷步数
 
-on:
-  schedule:
-    - cron: '0 4,6,8 * * *'
-  workflow_dispatch:
+#on#
+#  #  schedu
+#    - #    - cron: '0 4,6,8
+ #  # workflow_dispat
 
 jobs:
   build:
